docs(aircraft): add swagger documentation
